# ialirt-data-access

./: .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
ialirt_data_access/: __init__.py  cli.py  io.py
tests/: conftest.py  test_io.py
