[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ialirt-data-access"
version = "0.1.0"
description = "I-ALiRT Data Access"
authors = [{name = "IMAP SDC Developers", email = "imap-sdc@lists.lasp.colorado.edu"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["IMAP", "SDC", "SOC", "SDS", "Science Operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
homepage = "https://github.com/IMAP-Science-Operations-Center"
repository = "https://github.com/IMAP-Science-Operations-Center/ialirt-data-access"

[project.optional-dependencies]
dev = ["ruff"]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "-ra"

[tool.ruff]
target-version = "py39"
lint.select = ["B", "E", "D", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
# D104: Missing docstring in public package
# D203: 1 blank line required before class docstring
# D213: Multi-line docstring summary should start at the second line
# D413: Missing blank line after last section
# PLR2004: Magic value in comparison
lint.ignore = ["D104", "D203", "D213", "D413", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# S101: Use of assert detected
"tests/*" = ["S101"]
